Replace DB Entity Services with Utilities (#171)
* chore: entity utilities to later replace entity services

* refactor: replace all entities services references and usage with utilities

* refactor: delete entity services (no longer used)

* chore: addressed a few warnings from IntelliJ